url validation service implemented

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://localhost:5432/eshop_price_tracker_db
     username: postgres
     password: biba0218
   jpa:
@@ -10,5 +10,4 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL10Dialect
 
-logging:
-  level: debug
+
