--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,11 @@
 spring:
+  application:
+    name: goods-price-tracker
+  config:
+    import: optional:configserver:http://localhost:8888
+  sleuth:
+    sampler:
+      probability: 1.0
   datasource:
     url: jdbc:postgresql://localhost:5432/eshop_price_tracker_db
     username: postgres
@@ -9,5 +16,10 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL10Dialect
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
 
 
